--- a/index.html
+++ b/index.html
@@ -56,32 +56,10 @@
 * Large cocks
 ? Expresses an interest in cocks that are above average size.
 
-
-#Clothing
-(Self, Partner)
-* Clothed sex
-? Engaging in an RP where you and/or your partner are not undressed during sexual interaction.
-* Lingerie
-? Expresses an interest in the inclusion of lingerie in the sexual context of an RP, or an interest in characters wearing such.
-* Stockings
-? Expresses an interest in the inclusion of stockings in the sexual context of an RP, or an interest in characters wearing such.
-* Heels
-? Expresses an interest in the inclusion of high heeled shoes in the sexual context of an RP, or an interest in characters wearing such.
-* Leather
-? Expresses an interest in the inclusion of leather clothing in the sexual context of an RP, or an interest in characters wearing such.
-* Latex
-? The usage of latex and/or rubber material worn as clothing
-* Uniform / costume
-? Expresses an interest in the inclusion of uniforms or costumes in the sexual context of an RP, or an interest in characters wearing such.
-* Cross-dressing
-? Engaging in an RP where one or more characters dress in the clothes of the gender opposite to their own.
-
 #Groupings
 (General)
 * You and 1 male
 * You and 1 female
-* You and MtF trans
-* You and FtM trans
 * You and 1 male, 1 female
 * You and 2 males
 * You and 2 females
@@ -90,8 +68,6 @@
 
 #General
 (Giving, Receiving)
-* Romance / Affection
-? Displaying or expressing love or strong affection, passion, either during love making or during normal scenes.
 * Handjob / Fingering
 ? Sexual stimulation by direct, physical contact of the hands or fingers to the genitals.
 * Blowjob
@@ -121,25 +97,19 @@
 ? The act of giving oral stimulation to a partner's anus, by the means of licking and/or penetrating the recipient's anus with the tongue.
 * Double penetration
 ? The act of penetrating a single character's anus with two objects, including but not limited to the penis, sex toys, fist etc., or receiving such.
-* Anal fisting
-? The act of inserting one's hand(s) and/or arm(s) into one's partner's anus, or being the recipient of such acts.
 
 #Restrictive
 (Self, Partner)
-* Gag
+* Ball Gag
 ? The act of placing and lodging an object in another character's mouth to force him or her to breathe through his or her nose, as well as creating the inability to speak, or receiving such actions.
 * Collar
 ? Wearing a collar around the neck
 * Leash
 ? Being lead around on a leash
-* Chastity
-? Sexual abstinence, either willing or forced; this can include someone simply abstaining from sexual activity, or the wearing of a device that prevents it.
 * Bondage (Light)
 ? The use of bondage that is mild or moderate in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Bondage (Heavy)
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
-* Encasement
-? one’s whole body being wrapped up like a mummy in a latex suit, sleepsack, or other fetish gear for the purposes of sexual gratification.
 
 #Toys
 (Self, Partner)
@@ -149,8 +119,6 @@
 ? a sex toy of a type designed to be inserted into the rectum.
 * Vibrators
 ? a vibrating device used for sexual stimulation.
-* Sounding
-? The act of inserting metal rods into a male or female's urethra, or receiving such actions; technically implies rods that resonate and/or vibrate in response to a form of stimulation, but does not necessarily mean so.
 
 #Domination
 (As Dominant, As Submissive)
@@ -158,10 +126,6 @@
 ? Catchall for Dominant/Submissive Activities.
 * Domestic servitude
 ? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
-* Slavery
-? Serving as the dominant's beck and call, or recieving such service, without choice.
-* Pet play
-? Petplay is a in role in which the focus is on the sub entering the altered mind space of a different species, often a dog, cat, or horse.
 * DD/lg, MD/lb
 ? Daddy or Mommy Dom/ Littly Girl or Boy. The daddy/mommy is the more dominant half of the relationship, the little is the more submissive.
 * Discipline
@@ -174,17 +138,11 @@
 ? Refers to the dominant being in control of when the submissive achieves orgasm, either by physical means or by command; typically involves domination and/or excessive teasing and edging; orgasm may be completely denied.
 * Orgasm denial
 ? Refers to the dominant denying the submissive orgasm.
-* Power exchange
-? A relationship with service at the core.
 
 #No consent
 (Aggressor, Target)
 * Non-con / rape
 ? taking/being taken against one's will, often through force
-* Blackmail / coercion
-? Refers to the inclusion of Coercion and/or Blackmail in the context of the story arc of an RP, often in the form of a semi-consensual means of receiving sex from a partner.
-* Kidnapping
-? The act of abducting a character in an RP for the purpose of abusing, often sexually, or being abducted for such reasons; often implies indefinite imprisonment.
 * Drugs
 ? The use of illicit drugs in the context of an RP, typically to disorientate or otherwise mentally incapacitate a character, or to elevate the sensations of sex.
 * Alcohol
@@ -210,8 +168,6 @@
 
 #Degradation
 (Giving, Receiving)
-* Glory hole
-? Servicing a partner or recieving service from a partner with a physical barrier between the participants
 * Name calling
 ? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment.
 * Humiliation
@@ -240,8 +196,6 @@
 ? When multiple partners, usually 3 or more, engage in sexual intercourse with a single willing partner.
 * Breath play
 ? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
-* Impregnation
-? Impregnating a character
 * Pregnancy
 ? Fetishizing a pregnant character
 * Feminization
