Add/Edit copy changes
comment out the API call for the export button
Add extra copy
Edit some copy

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
-                <button id="Export" disabled=true>Export</button>
+                <button id="Export" disabled=true>Export (broke atm)</button>
                 <div id="Loading">Loading</div>
             </div>
             <button id="StartBtn"></button>
@@ -47,6 +47,8 @@
 ? Expresses an interest in characters that are waifish, thin, or slender.
 * Chubby
 ? Expresses an interest in characters that are well-rounded, full in form, and pudgy.
+* Muscular
+? In shape, works out, has muscles you can feel
 * Small breasts
 ? Expresses an interest in breasts that are particularly small, sometimes to the point of appearing absent.
 * Large breasts
@@ -55,6 +57,14 @@
 ? Expresses an interest in cocks that are below average size.
 * Large cocks
 ? Expresses an interest in cocks that are above average size.
+* Tall
+? Partner is taller than you.
+* Short
+? Partner is fun size.
+* Well groomed
+? Partner is shaved or trimmed.
+* Not groomed
+? Partner has an untamed bush.
 
 #Groupings
 (General)
@@ -86,6 +96,8 @@
 ? Keeping on the edge of climax without orgasm
 * Teasing
 ? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
+* Nipple play
+? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
 
 #Ass play
 (Giving, Receiving)
@@ -97,6 +109,8 @@
 ? The act of giving oral stimulation to a partner's anus, by the means of licking and/or penetrating the recipient's anus with the tongue.
 * Double penetration
 ? The act of penetrating a single character's anus with two objects, including but not limited to the penis, sex toys, fist etc., or receiving such.
+* 3+ Penetration
+? The act of penetrating a single character so that all 3 holes are filled in some way with toys, plugs, and cock.
 
 #Restrictive
 (Self, Partner)
@@ -126,8 +140,14 @@
 ? Catchall for Dominant/Submissive Activities.
 * Domestic servitude
 ? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
-* DD/lg, MD/lb
-? Daddy or Mommy Dom/ Littly Girl or Boy. The daddy/mommy is the more dominant half of the relationship, the little is the more submissive.
+* Daddy/Mommy Dom
+? not to be confused as your real Daddy/Mommy, like in Age play.  This is in reference to calling your Dom, "Daddy"/"Mommy", b/c they take care of everything and watch over you like a real Dad/Mom would.
+* Step Daddy/Mommy
+? Engaging in a RP in which characters are nearly related.
+* Step Brother/Sister
+? Engaging in a RP in which characters are nearly related.
+* Bratt/Uppity
+? Interest in engaging in a RP in which the sub character is combative and disobedient in any number of ways.
 * Discipline
 ? The use of reinforcement (rewards and/or punishments) in order to train a submissive to obey the various commands of a master.
 * Begging
@@ -138,6 +158,16 @@
 ? Refers to the dominant being in control of when the submissive achieves orgasm, either by physical means or by command; typically involves domination and/or excessive teasing and edging; orgasm may be completely denied.
 * Orgasm denial
 ? Refers to the dominant denying the submissive orgasm.
+* Whips
+? Indiana Jones adds flavor to your session
+* Paddles
+? BAM smack dyamn BAM
+* Handcuffs
+? No mobility of the arms
+* Wrist restraints
+? No mobility of the arms
+* Physically Restrained
+? The reciever is contrained from being able to move
 
 #No consent
 (Aggressor, Target)
@@ -162,9 +192,17 @@
 * Blood
 ? Pertains to the inclusion of blood or the retrieval of blood in any form in a sexual context, or engaging in acts which will draw blood. (not cutting)
 * Watersports
-? Pertains to the inclusion of urine, or the expelling of urine, in any form, in the sexual context of an RP.
+? The act of being cleaned up in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
 * Cum play
 ? Any number of situations focused on playing with cum.
+* Squirt
+? A yummy grapefruit soda... that leaves satification
+* Spit/Saliva - Pussy
+? Lube alternative
+* Spit/Saliva - Chest
+? Spit a little on chest
+* Spit/Saliva - Mouth
+? Spit a little on mouth
 
 #Degradation
 (Giving, Receiving)
@@ -196,12 +234,16 @@
 ? When multiple partners, usually 3 or more, engage in sexual intercourse with a single willing partner.
 * Breath play
 ? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
-* Pregnancy
-? Fetishizing a pregnant character
+* Breeding
+? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
 * Feminization
 ? Feminization is a type of role play that involves imposing traditionally female attributes onto a submissive male partner. It may also involve an adoption of traditionally feminine behaviors and mannerisms.
 * Cuckold / Cuckquean
 ? Refers to the act of a character who, within the confines of the RP world has been designated to be in a relationship, will have sexual interaction with a character other than the one who has been predetermined to be in a relationship, in the context of the RP.
+* Blindfold
+? Removing the sense of sight
+* Age Gap
+? Being in the mindset of a wide age gap for play,  a younger version of you.   This can also involve the sub age being less than 18 years old such as a high school student/teacher scenario or older such as a college student/teacher. This can also involve looking at the Dom as your real Daddy.
 
 #Pain
 (Giving, Receiving)
@@ -209,6 +251,11 @@
 ? Refers to the inclusion of light physical pain due to acts which are directly sexual.
 * Heavy pain
 ? Refers to the inclusion of heavy physical pain due to acts which are directly sexual; typically rough or excessive penetrations. This is probably gonna leave a mark.
+* Light face slapping
+* Medium face slapping
+* Hard face slapping
+* Face pressing
+? The act of holding down the other character's face down
 * Nipple clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
 * Clothes pins
@@ -219,6 +266,8 @@
 ? The use of toys, typically associated with BDSM and domination/submission, being employed against a submissive or bottom, particularly referring to contact play involving whips of any type, riding crops, paddles or flogs.
 * Gagging / Choking
 ? Being made to gag or choke, either by objects inserted into the mouth or hands/objects around the neck.
+* Asphyxiation
+? The act of being choked until the sub passes out.
 * Beating
 ? Being struck with fists or other objects
 * Spanking
@@ -235,6 +284,29 @@
 ? The act of biting or being bitten; sometimes painful, sometimes playful.
 * Cutting
 ? The act of cutting a partner to cause pain in a sexual context.
+* Hair pulling
+? The act of pulling or tugging on another character's hair, or being the recipient of such.
+
+
+#Sound
+(Self, Partner)
+* Dirty Talk
+? Vocally descibing a sexual activity with the aim of causing sexual arousal
+* Moaning
+* Grunting
+* Silence
+? No Sound
+
+# Evidence of play
+(Self, Partner)
+* Visable Bruising
+? Rough physical play that leaves discoloration in skin & NSFW
+* Somewhat hidden bruising
+? Not visible for work
+* Hidden brusing
+? Bikini/ speedo/ swim trunks area only
+* Hickies
+* Scratching
 
             </textarea>
             <button id="KinksOK">Accept</button>
