edits & changes to the lists

--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@
 ? Expresses an interest in cocks that are below average size.
 * Large cocks
 ? Expresses an interest in cocks that are above average size.
-* Tall
-? Partner is taller than you.
-* Short
-? Partner is fun size.
-* Well groomed
-? Partner is shaved or trimmed.
-* Not groomed
-? Partner has an untamed bush.
 
 #Groupings
 (General)
@@ -113,7 +105,7 @@
 ? The act of penetrating a single character so that all 3 holes are filled in some way with toys, plugs, and cock.
 
 #Restrictive
-(Self, Partner)
+(Partner)
 * Ball Gag
 ? The act of placing and lodging an object in another character's mouth to force him or her to breathe through his or her nose, as well as creating the inability to speak, or receiving such actions.
 * Collar
@@ -124,9 +116,15 @@
 ? The use of bondage that is mild or moderate in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Bondage (Heavy)
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
+* Handcuffs
+? No mobility of the arms
+* Wrist restraints
+? No mobility of the arms
+* Physically Restrained
+? The reciever is contrained from being able to move
 
 #Toys
-(Self, Partner)
+(Partner)
 * Dildos
 ? an object shaped like an erect penis used for sexual stimulation.
 * Plugs
@@ -135,13 +133,15 @@
 ? a vibrating device used for sexual stimulation.
 
 #Domination
-(As Dominant, As Submissive)
-* General Dom / General Sub
+(As Submissive)
+* General Sub
 ? Catchall for Dominant/Submissive Activities.
 * Domestic servitude
 ? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
-* Daddy/Mommy Dom
-? not to be confused as your real Daddy/Mommy, like in Age play.  This is in reference to calling your Dom, "Daddy"/"Mommy", b/c they take care of everything and watch over you like a real Dad/Mom would.
+* Age Gap
+? Being in the mindset of a wide age gap for play,  a younger version of you.   This can also involve the sub age being less than 18 years old such as a high school student/teacher scenario or older such as a college student/teacher. This can also involve looking at the Dom as your real Daddy.
+* Daddy Dom/little girl
+? not to be confused as your real Daddy/little girl, like in Age play.  This is in reference to calling your Dom, "Daddy"/"girlie", b/c they take care of everything and watch over you like a real Dad/daughter would.
 * Step Daddy/Mommy
 ? Engaging in a RP in which characters are nearly related.
 * Step Brother/Sister
@@ -162,12 +162,6 @@
 ? Indiana Jones adds flavor to your session
 * Paddles
 ? BAM smack dyamn BAM
-* Handcuffs
-? No mobility of the arms
-* Wrist restraints
-? No mobility of the arms
-* Physically Restrained
-? The reciever is contrained from being able to move
 
 #No consent
 (Aggressor, Target)
@@ -179,13 +173,6 @@
 ? The use of alcohol in the context of an RP, typically to disorientate or otherwise mentally incapacitate a character, or to elevate the sensations of sex.
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner
-
-#Taboo
-(General)
-* Exhibitionism
-? Engaging in an RP in which the setting is of a public nature; typically used in conjunction with exhibitionism and/or humiliation.
-* Voyeurism
-? Refers to the derivation of sexual stimulation from either/or the action of watching, typically in secret, a person (or people) reveal themselves or do something otherwise explicit, or the act of revealing one's self and/or doing something otherwise explicit with the intent to be viewed.
 
 #Fluids
 (General)
@@ -205,14 +192,14 @@
 ? Spit a little on mouth
 
 #Degradation
-(Giving, Receiving)
+(Receiving)
 * Name calling
 ? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment.
 * Humiliation
 ? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment; typically a more intense form of degradation.
 
 #Touch & Stimulation
-(Actor, Subject)
+(Receiving)
 * Cock/Pussy worship
 ? Gratuitous acknowledgment of one's partner's genitalia, either verbal and/or physical, or receiving such actions; typically implies oral stimulation.
 * Ass worship
@@ -227,7 +214,7 @@
 ? The use of sex toys that carry an electrical current; sometimes painful.
 
 #Misc. Fetish
-(Giving, Receiving)
+(Receiving)
 * Fisting
 ? The act of placing one's hand(s) and/or arm(s) into a vagina, or receiving such actions.
 * Gangbang
@@ -242,8 +229,10 @@
 ? Refers to the act of a character who, within the confines of the RP world has been designated to be in a relationship, will have sexual interaction with a character other than the one who has been predetermined to be in a relationship, in the context of the RP.
 * Blindfold
 ? Removing the sense of sight
-* Age Gap
-? Being in the mindset of a wide age gap for play,  a younger version of you.   This can also involve the sub age being less than 18 years old such as a high school student/teacher scenario or older such as a college student/teacher. This can also involve looking at the Dom as your real Daddy.
+* Exhibitionism
+? Engaging in an RP in which the setting is of a public nature; typically used in conjunction with exhibitionism and/or humiliation.
+* Voyeurism
+? Refers to the derivation of sexual stimulation from either/or the action of watching, typically in secret, a person (or people) reveal themselves or do something otherwise explicit, or the act of revealing one's self and/or doing something otherwise explicit with the intent to be viewed.
 
 #Pain
 (Giving, Receiving)
@@ -276,6 +265,8 @@
 ? slapping the genitalia of your partner, or recieving such slaps
 * Cock/Pussy torture
 ? Engaging in an RP in which at least one character's genitals will be given negative attention, the intent of which to be to cause physical pain.
+* Hair pulling
+? The act of pulling or tugging on another character's hair, or being the recipient of such.
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
 * Scratching
@@ -284,9 +275,6 @@
 ? The act of biting or being bitten; sometimes painful, sometimes playful.
 * Cutting
 ? The act of cutting a partner to cause pain in a sexual context.
-* Hair pulling
-? The act of pulling or tugging on another character's hair, or being the recipient of such.
-
 
 #Sound
 (Self, Partner)
