--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 ? multiple male and female characters
 
 #General
-(Giving, Receiving)
+(General)
 * Handjob / Fingering
 ? Sexual stimulation by direct, physical contact of the hands or fingers to the genitals.
 * Blowjob
@@ -91,7 +91,7 @@
 * Nipple play
 ? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
 
-#Ass play
+#Ass Play
 (Giving, Receiving)
 * Anal toys
 ? Refers to the inclusion of anal penetration with sex toys, including but not limited to dildos, vibrators, anal eggs, anal beads, etc.
@@ -158,13 +158,9 @@
 ? Refers to the dominant being in control of when the submissive achieves orgasm, either by physical means or by command; typically involves domination and/or excessive teasing and edging; orgasm may be completely denied.
 * Orgasm denial
 ? Refers to the dominant denying the submissive orgasm.
-* Whips
-? Indiana Jones adds flavor to your session
-* Paddles
-? BAM smack dyamn BAM
 
 #No consent
-(Aggressor, Target)
+(Receiving)
 * Non-con / rape
 ? taking/being taken against one's will, often through force
 * Drugs
@@ -235,7 +231,7 @@
 ? Refers to the derivation of sexual stimulation from either/or the action of watching, typically in secret, a person (or people) reveal themselves or do something otherwise explicit, or the act of revealing one's self and/or doing something otherwise explicit with the intent to be viewed.
 
 #Pain
-(Giving, Receiving)
+(Receiving)
 * Light pain
 ? Refers to the inclusion of light physical pain due to acts which are directly sexual.
 * Heavy pain
@@ -245,6 +241,8 @@
 * Hard face slapping
 * Face pressing
 ? The act of holding down the other character's face down
+* Hair pulling
+? The act of pulling or tugging on another character's hair, or being the recipient of such.
 * Nipple clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
 * Clothes pins
@@ -265,8 +263,10 @@
 ? slapping the genitalia of your partner, or recieving such slaps
 * Cock/Pussy torture
 ? Engaging in an RP in which at least one character's genitals will be given negative attention, the intent of which to be to cause physical pain.
-* Hair pulling
-? The act of pulling or tugging on another character's hair, or being the recipient of such.
+* Whips
+? Indiana Jones adds flavor to your session
+* Paddles
+? BAM smack dyamn BAM
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
 * Scratching
@@ -285,9 +285,9 @@
 * Silence
 ? No Sound
 
-# Evidence of play
-(Self, Partner)
-* Visable Bruising
+#Evidence of Play
+(Receiving)
+* Visable bruising
 ? Rough physical play that leaves discoloration in skin & NSFW
 * Somewhat hidden bruising
 ? Not visible for work
