--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 * Dirty Talk
 ? Vocally descibing a sexual activity with the aim of causing sexual arousal
 * Moaning
-* Grunting
+* Growling/Grunting
 * Silence
 ? No Sound
 
