--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Handcuffs
 ? No mobility of the arms
-* Wrist restraints
+* Wrist Restraints
 ? No mobility of the arms
 * Physically Restrained
 ? The reciever is contrained from being able to move
