remove disable export

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
-                <button id="Export" disabled=true>Export (broke atm)</button>
+                <button id="Export">Export (broke atm)</button>
                 <div id="Loading">Loading</div>
             </div>
             <button id="StartBtn"></button>
