--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 ? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
 
 #Ass Play
-(Giving, Receiving)
+(Receiving)
 * Anal toys
 ? Refers to the inclusion of anal penetration with sex toys, including but not limited to dildos, vibrators, anal eggs, anal beads, etc.
 * Anal sex/pegging
@@ -114,27 +114,29 @@
 ? Being lead around on a leash
 * Bondage (Light)
 ? The use of bondage that is mild or moderate in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
+* Bondage (Medium)
+? Harder than light, lighter than hard
 * Bondage (Heavy)
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
-* Handcuffs
-? No mobility of the arms
-* Wrist Restraints
-? No mobility of the arms
+* Wrist restraints
+? Restrainted at the wrist using handcuffs, ropes, and other fun things
+* Restrained by devices
+? Being tied to furniture, wall mounts or bed posts using chains, ropes, and/or other fun things
 * Physically Restrained
-? The reciever is contrained from being able to move
+? The receiver is restrained from being able to move by physical touch
 
 #Toys
 (Partner)
 * Dildos
 ? an object shaped like an erect penis used for sexual stimulation.
-* Plugs
+* Butt Plugs
 ? a sex toy of a type designed to be inserted into the rectum.
 * Vibrators
 ? a vibrating device used for sexual stimulation.
 
 #Domination
 (As Submissive)
-* General Sub
+* General sub
 ? Catchall for Dominant/Submissive Activities.
 * Domestic servitude
 ? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
@@ -142,7 +144,7 @@
 ? Being in the mindset of a wide age gap for play,  a younger version of you.   This can also involve the sub age being less than 18 years old such as a high school student/teacher scenario or older such as a college student/teacher. This can also involve looking at the Dom as your real Daddy.
 * Daddy Dom/little girl
 ? not to be confused as your real Daddy/little girl, like in Age play.  This is in reference to calling your Dom, "Daddy"/"girlie", b/c they take care of everything and watch over you like a real Dad/daughter would.
-* Step Daddy/Mommy
+* Step Daddy/Step daughter
 ? Engaging in a RP in which characters are nearly related.
 * Step Brother/Sister
 ? Engaging in a RP in which characters are nearly related.
@@ -159,14 +161,14 @@
 * Orgasm denial
 ? Refers to the dominant denying the submissive orgasm.
 
-#No consent
+#No Consent
 (Receiving)
-* Non-con / rape
-? taking/being taken against one's will, often through force
-* Drugs
-? The use of illicit drugs in the context of an RP, typically to disorientate or otherwise mentally incapacitate a character, or to elevate the sensations of sex.
+* Non-consent
+? Being taken against one's will, often through force (safe)
+* Non-Alcohol
+? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
 * Alcohol
-? The use of alcohol in the context of an RP, typically to disorientate or otherwise mentally incapacitate a character, or to elevate the sensations of sex.
+? The use of alcohol in the context of an RP to elevate the sensations of sex.
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner
 
@@ -182,15 +184,15 @@
 ? A yummy grapefruit soda... that leaves satification
 * Spit/Saliva - Pussy
 ? Lube alternative
-* Spit/Saliva - Chest
-? Spit a little on chest
+* Spit/Saliva - Body
+? Spit a little on chest or thighs
 * Spit/Saliva - Mouth
 ? Spit a little on mouth
 
 #Degradation
 (Receiving)
 * Name calling
-? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment.
+? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions of psychological domination.
 * Humiliation
 ? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment; typically a more intense form of degradation.
 
