--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
     </head>
     <body>
         <div class="widthWrapper">
-            <!--  <button id="Edit"></button> -->
+            <button id="Edit"></button>
             <h1>Kinklist</h1>
             <select id="listType">
               <option value="classic">Classic</option>
               <option value="detailed">Detailed</option>
               <option value="plsno">Please Don't</option>
             </select>
-
-<!--            <div class="legend">
+            <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
                 <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
                 <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Like</span></div>
                 <div><span data-color="#FDFD6B" class="choice indifferent"></span> <span class="legend-text">Indifferent</span></div>
                 <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Maybe</span></div>
                 <div><span data-color="#920000" class="choice limit"></span> <span class="legend-text">Limit</span></div>
-            </div> -->
+            </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
                 <button id="Export">Export</button>
