--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 ? Bikini/ speedo/ swim trunks area only
 * Hickies
 * Scratching
+* Video
 
             </textarea>
             <button id="KinksOK">Accept</button>
