Daddy made changes v2

--- a/index.html
+++ b/index.html
@@ -182,25 +182,21 @@
 * Squirt
 ? A yummy grapefruit soda... that leaves satification
 * Spit/Saliva - Pussy
-? Lube alternative
+? The act of spitting a little on your pussy
 * Spit/Saliva - Body
-? Spit a little on chest or thighs
+? Spit The act of spitting a little on your body, chest, thighs, etc
 * Spit/Saliva - Mouth
-? Spit a little on mouth
+? The act of spitting a little in your mouth, NOT FULL SPIT, EW LOL
 
 #Degradation
 (Receiving)
 * Name calling
 ? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions of psychological domination.
 * Humiliation
-? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation, or merely as a form of psychological domination or punishment; typically a more intense form of degradation.
+? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation.  Typically a more intense form of degradation.
 
 #Touch & Stimulation
 (Receiving)
-* Cock/Pussy worship
-? Gratuitous acknowledgment of one's partner's genitalia, either verbal and/or physical, or receiving such actions; typically implies oral stimulation.
-* Ass worship
-? Gratuitous acknowledgment of one's partner's ass, either verbal and/or physical, or receiving such actions; typically implies oral stimulation.
 * Foot play
 ? The act of incorporating the feet or feet paws into the sexual context of an RP, including but not limited to the worshiping of feet, receiving sexual gratification from the sight or smell of feet and/or humping feet, sometimes to the point of orgasm.
 * Tickling
@@ -220,10 +216,6 @@
 ? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
-* Feminization
-? Feminization is a type of role play that involves imposing traditionally female attributes onto a submissive male partner. It may also involve an adoption of traditionally feminine behaviors and mannerisms.
-* Cuckold / Cuckquean
-? Refers to the act of a character who, within the confines of the RP world has been designated to be in a relationship, will have sexual interaction with a character other than the one who has been predetermined to be in a relationship, in the context of the RP.
 * Blindfold
 ? Removing the sense of sight
 * Exhibitionism
@@ -279,24 +271,25 @@
 
 #Sound
 (Self, Partner)
-* Dirty Talk
-? Vocally descibing a sexual activity with the aim of causing sexual arousal
+* Dirty Talk to DOM
+? You like to dirty talk to your DOM during sex and RP
+* Dirty Talk from DOM
+? You like your DOM to talk dirty to you
 * Moaning
-* Growling/Grunting
-* Silence
-? No Sound
+? You like to be loud in bed
 
 #Evidence of Play
 (Receiving)
 * Visable bruising
-? Rough physical play that leaves discoloration in skin & NSFW
+? Rough physical play that leaves discoloration on skin that may be visible with normal clothing (shirt, pants, etc)
 * Somewhat hidden bruising
-? Not visible for work
+? Rough physical play that leaves discoloration on skin that may be visible with less normal clothing such as bikini, shorts, short sleeve shirt
 * Hidden brusing
-? Bikini/ speedo/ swim trunks area only
-* Hickies
+? Rough physical play that leaves discoloration on skin that may be visible only when fully nude, bikini season safe
 * Scratching
+? Scratching another with their nails, sometimes leaving marks
 * Video
+? Giving consent to record time together with the intent of watching the video together later.  This allows each person to learn and improve for the next session.  Videos will NEVER be shown outside of this relationship.  PROMISE.
 
             </textarea>
             <button id="KinksOK">Accept</button>
