--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </head>
     <body>
         <div class="widthWrapper">
-            <button id="Edit"></button>
+           <!--  <button id="Edit"></button> -->
             <h1>Kinklist</h1>
-            <select id="listType">
+<!--            <select id="listType">
               <option value="classic">Classic</option>
               <option value="detailed">Detailed</option>
               <option value="plsno">Please Don't</option>
-            </select>
+            </select> -->
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
                 <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
