--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
 ? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions of psychological domination.
 * Humiliation
 ? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation.  Typically a more intense form of degradation.
+* Daddy
+? Using the name "Daddy" to refer to your DOM
+* Sir
+? Using the name "Sir" to refer to your DOM
 
 #Touch & Stimulation
 (Receiving)
