--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button id="Export">Export</button>
                 <div id="Loading">Loading</div>
             </div>
-            <button id="StartBtn"></button>
+           <!-- <button id="StartBtn"></button> -->  
             <div id="InputList"></div>
         </div>
         <div id="EditOverlay" class="overlay">
