--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to male genitals
 * Deep throat
 ? The act of penetrating the mouth of another character to the depths at which the penis or insertion enters the back of the mouth cavity and/or throat, sometimes causing a gag reflex, or being the recipient of such actions.
+* Face Fucking
+? The act of a fucking your partners face, whether upright or upside down, to the degree agreed upon prior.
 * Swallowing
 ? The act of orally consuming semen, either directly or indirectly from a penis.
 * Facials
